Adding gitlab key in environment

--- a/spack-environments/toss_3_x86_64_ib/gcc_8_1_0/spack.yaml
+++ b/spack-environments/toss_3_x86_64_ib/gcc_8_1_0/spack.yaml
@@ -10,5 +10,15 @@ spack:
   - compilers.yaml
   - packages.yaml
 
+  mirrors: { "mirror": "file:///usr/workspace/radiuss/spack-mirror" }
+
   view: false
   concretization: separately
+
+  gitlab-ci:
+    mappings:
+    - match: ['os=rhel7']
+      runner-attributes:
+        tags: [shell, quartz]
+        variables: {}
+
