--- a/ci_template/quartz-templates.yml
+++ b/ci_template/quartz-templates.yml
@@ -6,16 +6,13 @@
 ##############################################################################
 
 ####
-# This is the share configuration of jobs for quartz
-
-####
-# In pre-build phase, allocate a node for builds
+# Shared configuration of jobs for quartz
 .on_quartz:
   tags:
     - shell
     - quartz
   rules:
-    - if: '$CI_COMMIT_BRANCH =~ /_qnone/ || $ON_QUARTZ == "OFF"' #run except if ...
+    - if: '$CI_COMMIT_BRANCH =~ /_qnone/ || $ON_QUARTZ == "OFF"'
       when: never
     - if: '$CI_JOB_NAME =~ /release_resources/'
       when: always
@@ -33,7 +30,8 @@ allocate_resources (on quartz):
 
 ####
 # In post-build phase, deallocate resources
-# Note : make sure this is run even on build phase failure
+# Note : make sure this is run even on failure of the build phase
+# (see .on_quartz rules)
 release_resources (on quartz):
   variables:
     GIT_STRATEGY: none
@@ -46,5 +44,5 @@ release_resources (on quartz):
 ####
 # Generic quartz build job, extending build script
 .build_and_test_on_quartz:
-  extends: [.build_toss_3_x86_64_ib_script, .on_quartz, .venv]
+  extends: [.build_toss_3_x86_64_ib_script, .on_quartz]
   stage: q_build_and_test
