Do not trigger if nothing to trigger

--- a/.gitlab/concretize.yml
+++ b/.gitlab/concretize.yml
@@ -7,6 +7,11 @@
 
 concretize-on-quartz:
   stage: concretize-test
+  rules:
+    - changes:
+      - spack-environments/**/*
+    - if: '$SPACK_ENVIRONMENT_CI'
+    - if: '$TRIGGER_SPACK_PIPELINES'
   variables:
     CHILD_SPACK_PATH: ${SPACK_PATH}
   trigger:
