--- a/spack-environments/radiuss-concretize/spack.yaml
+++ b/spack-environments/radiuss-concretize/spack.yaml
@@ -6,9 +6,13 @@
 ###############################################################################
 
 spack:
-  include:
-  - ../radiuss/$SYS_TYPE/compilers.yaml
-  - ../radiuss/$SYS_TYPE/packages.yaml
+  include: [../radiuss/$SYS_TYPE]
 
   view: false
   concretization: separately
+
+  config:
+    misc_cache: $spack/.misc_cache
+    test_stage: $spack/.test_stage
+    'build_stage:':
+    - $spack/var/spack/stage
