--- a/.gitlab/concretize.yml
+++ b/.gitlab/concretize.yml
@@ -10,7 +10,7 @@ concretize-on-quartz:
   rules:
     - changes:
       - spack-environments/**/*
-    - if: '$SPACK_ENVIRONMENT_CI'
+    - if: '$CONCRETIZATION_TESTING'
     - if: '$TRIGGER_SPACK_PIPELINES'
   variables:
     CHILD_SPACK_PATH: ${SPACK_PATH}
