--- a/.gitlab/child/concretize.yml
+++ b/.gitlab/child/concretize.yml
@@ -28,10 +28,13 @@ stages:
     - git clone ${CHILD_SPACK_PATH} --depth 1 local_spack
     - . local_spack/share/spack/setup-env.sh
     - cd spack-environments/radiuss-concretize
-    - spack ${CHILD_DEBUG} env activate .
+    - spack ${CHILD_SPACK_DEBUG} env activate .
     - cd -
   after_script:
     - date
+
+.concretize_command: &concretize_command |
+  spack ${CHILD_SPACK_DEBUG} concretize
 
 .concretize-alone:
   extends: .concretize
@@ -49,137 +52,137 @@ concretize_umpire:
   extends: .concretize-alone
   script:
     - spack add umpire
-    - spack ${CHILD_DEBUG} concretize
+    - *concretize_command
 
 concretize_raja:
   extends: .concretize-alone
   script:
     - spack add raja
-    - spack ${CHILD_DEBUG} concretize
+    - *concretize_command
 
 concretize_hypre:
   extends: .concretize-alone
   script:
     - spack add hypre
-    - spack ${CHILD_DEBUG} concretize
+    - *concretize_command
 
 concretize_mfem:
   extends: .concretize-alone
   script:
     - spack add mfem
-    - spack ${CHILD_DEBUG} concretize
+    - *concretize_command
 
 concretize_conduit:
   extends: .concretize-alone
   script:
     - spack add conduit
-    - spack ${CHILD_DEBUG} concretize
+    - *concretize_command
 
 concretize_sundials:
   extends: .concretize-alone
   script:
     - spack add sundials
-    - spack ${CHILD_DEBUG} concretize
+    - *concretize_command
 
 concretize_samrai:
   extends: .concretize-alone
   script:
     - spack add samrai
-    - spack ${CHILD_DEBUG} concretize
+    - *concretize_command
 
 concretize_xbraid:
   extends: .concretize-alone
   script:
     - spack add xbraid
-    - spack ${CHILD_DEBUG} concretize
+    - *concretize_command
 
 concretize_ascent:
   extends: .concretize-alone
   script:
     - spack add ascent
-    - spack ${CHILD_DEBUG} concretize
+    - *concretize_command
 
 concretize_zfp:
   extends: .concretize-alone
   script:
     - spack add zfp
-    - spack ${CHILD_DEBUG} concretize
+    - *concretize_command
 
 concretize_scr:
   extends: .concretize-alone
   script:
     - spack add scr
-    - spack ${CHILD_DEBUG} concretize
+    - *concretize_command
 
 concretize_visit:
   extends: .concretize-alone
   script:
     - spack add visit
-    - spack ${CHILD_DEBUG} concretize
+    - *concretize_command
 
 concretize_glvis:
   extends: .concretize-alone
   script:
     - spack add glvis
-    - spack ${CHILD_DEBUG} concretize
+    - *concretize_command
 
 concretize_caliper:
   extends: .concretize-alone
   script:
     - spack add caliper
-    - spack ${CHILD_DEBUG} concretize
+    - *concretize_command
 
 concretize_spindle:
   extends: .concretize-alone
   script:
     - spack add spindle
-    - spack ${CHILD_DEBUG} concretize
+    - *concretize_command
 
 concretize_flux-sched:
   extends: .concretize-alone
   script:
     - spack add flux-sched
-    - spack ${CHILD_DEBUG} concretize
+    - *concretize_command
 
 concretize_py-maestrowf:
   extends: .concretize-alone
   script:
     - spack add py-maestrowf
-    - spack ${CHILD_DEBUG} concretize
+    - *concretize_command
 
 concretize_math_physics:
   extends: .concretize-group
   script:
     - spack add mfem hypre sundials samrai xbraid
-    - spack ${CHILD_DEBUG} concretize
+    - *concretize_command
   needs: [concretize_mfem, concretize_hypre, concretize_sundials, concretize_samrai, concretize_xbraid]
 
 concretize_data_visualization:
   extends: .concretize-group
   script:
     - spack add conduit ascent zfp scr visit
-    - spack ${CHILD_DEBUG} concretize
+    - *concretize_command
   needs: [concretize_conduit, concretize_ascent, concretize_zfp, concretize_scr, concretize_visit]
 
 concretize_portability_memory:
   extends: .concretize-group
   script:
     - spack add umpire raja
-    - spack ${CHILD_DEBUG} concretize
+    - *concretize_command
   needs: [concretize_umpire, concretize_raja]
 
 concretize_performances_workflow:
   extends: .concretize-group
   script:
     - spack add caliper spindle flux-sched py-maestrowf
-    - spack ${CHILD_DEBUG} concretize
+    - *concretize_command
   needs: [concretize_caliper, concretize_spindle, concretize_flux-sched, concretize_py-maestrowf]
 
 concretize_radiuss:
   extends: .concretize-all
   script:
     - spack add caliper spindle flux-sched py-maestrowf mfem hypre sundials samrai xbraid conduit ascent zfp scr visit umpire raja
-    - spack ${CHILD_DEBUG} concretize
+    - *concretize_command
   needs: [concretize_math_physics, concretize_data_visualization, concretize_portability_memory, concretize_performances_workflow]
   artifacts:
     paths:
