--- a/.gitlab/concretize.yml
+++ b/.gitlab/concretize.yml
@@ -14,7 +14,7 @@ concretize-on-quartz:
     - if: '$TRIGGER_SPACK_PIPELINES'
   variables:
     CHILD_SPACK_PATH: ${SPACK_PATH}
-    CHILD_DEBUG: ${DEBUG}
+    CHILD_SPACK_DEBUG: ${SPACK_DEBUG}
   trigger:
     include: .gitlab/child/concretize.yml
     strategy: depend
