Skip quartz; add care-specific clone commands

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,28 +21,30 @@ stages:
   - get-spack
   - concretize-test
   - generate-lassen
-  - generate-quartz
+  #- generate-quartz
   - build
   - rm-spack
 #[--one-generate-per-stage]
 
-.on-quartz:
-  tags: [shell, quartz]
+#.on-quartz:
+#  tags: [shell, quartz]
 
 .on-lassen:
   tags: [shell, lassen]
 
 #[get-spack--]
 get-spack:
-  extends: [.on-quartz]
+  #extends: [.on-quartz]
+  extends: [.on-lassen]
   stage: get-spack
   script:
-    - .gitlab/get-spack
+    - .gitlab/get-spack-care
 #[--get-spack]
 
 #[rm-spack--]
 rm-spack:
-  extends: [.on-quartz]
+  #extends: [.on-quartz]
+  extends: [.on-lassen]
   stage: rm-spack
   script:
     - .gitlab/remove-spack
