--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ variables:
   SPACK_PARENT_DIR: ${CI_BUILDS_DIR}/llnl-stack-${CI_COMMIT_SHORT_SHA}
   SPACK_PATH: ${CI_BUILDS_DIR}/llnl-stack-${CI_COMMIT_SHORT_SHA}/spack
   #[--create-unique-path]
-  SPACK_REPO: git@github.com:spack/spack.git
+  SPACK_REPO: https://github.com/spack/spack.git
   SPACK_REF: develop
   SPACK_DEBUG: "-d"
   PROJECT_NAME: "radiuss"
