--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -56,6 +56,7 @@ fix-permissions:
   stage: last
   script:
     - chmod -R g+rwX /usr/workspace/radiuss/install/radiuss-stack/spack_path_placeholder/spack_path_placeholder/spack_path_placeholder/spack_path_pla/.spack-db
+  when: always
 
 include:
   #- .gitlab/concretize.yml
