--- a/spack-environments/care/spack.yaml
+++ b/spack-environments/care/spack.yaml
@@ -29,7 +29,7 @@ spack:
   definitions:
   - compilers: ['%gcc@8.3.1'] # ['%xl@16.1.1.7']
   - projects:
-    - umpire@5.0.0~shared ^cmake@3.14.5 ^cuda@10.1.168
+    #- umpire@5.0.0~shared ^cmake@3.14.5 ^cuda@10.1.168
     - raja@main ^cmake@3.14.5 ^cuda@10.1.168
     - chai+enable_pick@2.3.0 ^cmake@3.14.5 ^cuda@10.1.168
     - care@develop ^cmake@3.14.5 ^cuda@10.1.168
