--- a/spack-environments/care/spack.yaml
+++ b/spack-environments/care/spack.yaml
@@ -31,7 +31,7 @@ spack:
   - projects:
     #- umpire@5.0.0~shared ^cmake@3.14.5 ^cuda@10.1.168
     - raja@main ^cmake@3.14.5 ^cuda@10.1.168
-    - chai+enable_pick@2.3.0 ^cmake@3.14.5 ^cuda@10.1.168
+    - chai+enable_pick@2.3.1 ^cmake@3.14.5 ^cuda@10.1.168 ^umpire@5.0.0~shared
     - care@develop ^cmake@3.14.5 ^cuda@10.1.168
 
   specs:
