--- a/.gitlab/generate.yml
+++ b/.gitlab/generate.yml
@@ -11,7 +11,7 @@
   rules:
     - if: '$PROJECT_NAME == ""'
       when: never
-    - if: '$CI_JOB_NAME == "rm-spack"'
+    - if: '$CI_JOB_NAME == "rm-repos"'
       when: always
     - when: on_success
 
@@ -37,26 +37,26 @@
     paths:
       - "${CI_PROJECT_DIR}/jobs_scratch_dir"
 
-## quartz
-#generate-on-quartz:
-#  extends: [.generate-pipeline, .on-quartz, .has_project_name]
-#  stage: generate-quartz
-#  before_script:
-#    - .gitlab/print-variables
+# quartz
+generate-on-quartz:
+  extends: [.generate-pipeline, .on-quartz, .has_project_name]
+  stage: generate-quartz
+  before_script:
+    - .gitlab/print-variables
 
-##[send-variable-child--]
-#build-on-quartz:
-#  extends: [.has_project_name]
-#  stage: build
-#  variables:
-#    CHILD_SPACK_PATH: ${SPACK_PATH}
-#  trigger:
-#    include:
-#      - artifact: "jobs_scratch_dir/pipeline.yml"
-#        job: generate-on-quartz
-#    strategy: depend
-#  needs: [generate-on-quartz]
-##[--send-variable-child]
+#[send-variable-child--]
+build-on-quartz:
+  extends: [.has_project_name]
+  stage: build
+  variables:
+    CHILD_SPACK_PATH: ${SPACK_PATH}
+  trigger:
+    include:
+      - artifact: "jobs_scratch_dir/pipeline.yml"
+        job: generate-on-quartz
+    strategy: depend
+  needs: [generate-on-quartz]
+#[--send-variable-child]
 
 # lassen
 generate-on-lassen:
