Start over with environment constraints for CARE's packages

--- a/spack-environments/care/spack.yaml
+++ b/spack-environments/care/spack.yaml
@@ -29,11 +29,17 @@ spack:
   definitions:
   - compilers: ['%gcc@8.3.1'] # ['%xl@16.1.1.7']
   - projects:
-    #- umpire@5.0.0~shared ^cmake@3.14.5 ^cuda@10.1.168
-    - raja@main ^cmake@3.14.5 ^cuda@10.1.168
-    - chai+enable_pick@2.3.1 ^cmake@3.14.5 ^cuda@10.1.168 ^umpire@5.0.0~shared
+    # Spack develop versions
+    ##- umpire@5.0.0~shared ^cmake@3.14.5 ^cuda@10.1.168  # not working
+    #- raja@main ^cmake@3.14.5 ^cuda@10.1.168
+    #- chai+enable_pick@2.3.1 ^cmake@3.14.5 ^cuda@10.1.168 ^umpire@5.0.0~shared
     #- care@develop ^cmake@3.14.5 ^cuda@10.1.168 ^umpire~shared ^raja~openmp ^chai~shared
-    - raja@develop ^cmake@3.14.5 ^camp@master
+    # CARE repo's develop versions
+    - umpire@5.0.0~shared ^cuda@10.1.168 
+    - raja@develop
+    - raja@main ^cuda@10.1.168
+    - care@develop
+    - raja@develop
 
   specs:
   - matrix:
