--- a/spack-environments/care/spack.yaml
+++ b/spack-environments/care/spack.yaml
@@ -38,9 +38,9 @@ spack:
     # CARE repo's develop versions
     - umpire@5.0.0~shared ^cmake@3.14.5 ^cuda@10.1.168 
     - raja@main ^cmake@3.14.5 ^cuda@10.1.168
-    - chai+enable_pick@2.3.1 ^cmake@3.14.5 ^cuda@10.1.168 # ^umpire@5.0.0~shared
+    #- chai+enable_pick@2.3.1 ^cmake@3.14.5 ^cuda@10.1.168 # ^umpire@5.0.0~shared
     - raja@develop ^cmake@3.14.5
-    - care@develop ^cmake@3.14.5 ^chai~disable_rm
+    - care@develop ^cmake@3.14.5 ^cuda@10.1.168 ^chai~disable_rm
 
   specs:
   - matrix:
