--- a/spack-environments/care/spack.yaml
+++ b/spack-environments/care/spack.yaml
@@ -36,10 +36,10 @@ spack:
     #- care@develop ^cmake@3.14.5 ^cuda@10.1.168 ^umpire~shared ^raja~openmp ^chai~shared
     #- raja@develop ^cmake@3.14.5 ^camp@master
     # CARE repo's develop versions
-    - umpire@5.0.0~shared ^cmake@3.14.5 ^cuda@10.1.168 
-    - raja@main ^cmake@3.14.5 ^cuda@10.1.168
-    #- chai+enable_pick@2.3.1 ^cmake@3.14.5 ^cuda@10.1.168 # ^umpire@5.0.0~shared
-    - raja@develop ^cmake@3.14.5
+    #- umpire@5.0.0~shared ^cmake@3.14.5 ^cuda@10.1.168 
+    #- raja@main ^cmake@3.14.5 ^cuda@10.1.168
+    ##- chai+enable_pick@2.3.1 ^cmake@3.14.5 ^cuda@10.1.168 # ^umpire@5.0.0~shared
+    #- raja@develop ^cmake@3.14.5
     - care@develop ^cmake@3.14.5 ^cuda@10.1.168 ^chai~disable_rm
 
   specs:
